kubernetes/apps/base/media/media-robbinsdale/radarr-4kremux/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-4kremux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-4kremux
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: config
        backup.velero.io/backup-volumes-excludes: media
      labels:
        app: radarr-4kremux
    spec:
      containers:
      - name: radarr-4kremux
        image: lscr.io/linuxserver/radarr:6.4.4
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-4kremux-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-4kremux
spec:
  selector:
    app: radarr-4kremux
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
